--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://139.199.168.194:3306/program?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.username=pagoda
+spring.datasource.password=Pagoda@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
