--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,7 @@ spring.datasource.username=pagoda
 spring.datasource.password=Pagoda@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+spring.redis.host=192.168.0.32
+spring.redis.port=36379
+spring.redis.password=
+spring.redis.database=1
