--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,23 @@
         <version>1.5.13.RELEASE</version>
     </parent>
 
+    <repositories>
+        <repository>
+            <id>Ali-Repository</id>
+            <name>AliBaba</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+
+        <repository>
+            <id>Pagoda-Repository</id>
+            <name>pagoda</name>
+            <url>http://maven.dev.pagoda.com.cn:10008/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!--Spring Boot依赖-->
         <dependency>
@@ -36,6 +53,12 @@
             <scope>test</scope>
         </dependency>
         <!--常用库依赖-->
+        <!--pagoda.utils-->
+        <dependency>
+            <groupId>com.pagoda.common</groupId>
+            <artifactId>common</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
