--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.profiles.active=dev
 # 404 交给异常处理器处理
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
+
+#文件上传大小限制
+# Single file max size
+spring.http.multipart.max-file-size=50Mb
+# All files max size
+spring.http.multipart.max-request-size=50Mb
